NetBSD Problem Report #52218

From www@NetBSD.org  Mon May  8 01:34:43 2017
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 9049A7A279
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  8 May 2017 01:34:43 +0000 (UTC)
Message-Id: <20170508013441.A0EBE7A2AF@mollari.NetBSD.org>
Date: Mon,  8 May 2017 01:34:41 +0000 (UTC)
From: venture37@geeklan.co.uk
Reply-To: venture37@geeklan.co.uk
To: gnats-bugs@NetBSD.org
Subject: /usr/share/examples/lua/sqlite.lua segfaults
X-Send-Pr-Version: www-1.0

>Number:         52218
>Category:       bin
>Synopsis:       /usr/share/examples/lua/sqlite.lua segfaults
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon May 08 01:35:00 +0000 2017
>Closed-Date:    Wed May 10 07:39:48 +0000 2017
>Last-Modified:  Sun Jul 23 14:20:00 +0000 2017
>Originator:     Sevan Janiyan
>Release:        NetBSD-HEAD
>Organization:
>Environment:
NetBSD armv7 7.99.71 NetBSD 7.99.71 (BEAGLEBONE) #0: Fri May  5 12:21:28 UTC 2017  mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/evbarm/compile/BEAGLEBONE evbarm
>Description:
Running the sample lua sqlite script causes a seg fault.
Confirmed on amd64 & evbarm
>How-To-Repeat:

>Fix:
run lua /usr/share/examples/lua/sqlite.lua

>Release-Note:

>Audit-Trail:
From: Marc Balmer <marc@msys.ch>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/52218: /usr/share/examples/lua/sqlite.lua segfaults
Date: Mon, 8 May 2017 09:00:21 +0200

 Am 08.05.17 um 03:35 schrieb venture37@geeklan.co.uk:
 >> Number:         52218
 >> Category:       bin
 >> Synopsis:       /usr/share/examples/lua/sqlite.lua segfaults
 >> Confidential:   no
 >> Severity:       non-critical
 >> Priority:       low
 >> Responsible:    bin-bug-people
 >> State:          open
 >> Class:          sw-bug
 >> Submitter-Id:   net
 >> Arrival-Date:   Mon May 08 01:35:00 +0000 2017
 >> Originator:     Sevan Janiyan
 >> Release:        NetBSD-HEAD
 >> Organization:
 >> Environment:
 > NetBSD armv7 7.99.71 NetBSD 7.99.71 (BEAGLEBONE) #0: Fri May  5 12:21:28 UTC 2017  mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/evbarm/compile/BEAGLEBONE evbarm
 >> Description:
 > Running the sample lua sqlite script causes a seg fault.
 > Confirmed on amd64 & evbarm
 >> How-To-Repeat:
 > 
 >> Fix:
 > run lua /usr/share/examples/lua/sqlite.lua
 > 

 This worked before.  Most likely sqlite was updated and the person doing
 it did not test if the sqlite binding still works.

State-Changed-From-To: open->closed
State-Changed-By: mbalmer@NetBSD.org
State-Changed-When: Wed, 10 May 2017 07:39:48 +0000
State-Changed-Why:
Fixed in NetBSD-current.


From: "Marc Balmer" <mbalmer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52218 CVS commit: src/lib/lua/sqlite
Date: Wed, 10 May 2017 07:36:01 +0000

 Module Name:	src
 Committed By:	mbalmer
 Date:		Wed May 10 07:36:01 UTC 2017

 Modified Files:
 	src/lib/lua/sqlite: sqlite.c

 Log Message:
 Guard against double freeing of objects (explicit by the Lua program, then
 later by the garbage collector).
 This fixes PR bin/52218.


 To generate a diff of this commit:
 cvs rdiff -u -r1.8 -r1.9 src/lib/lua/sqlite/sqlite.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52218 CVS commit: [netbsd-7] src/lib/lua/sqlite
Date: Sat, 3 Jun 2017 17:11:51 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sat Jun  3 17:11:51 UTC 2017

 Modified Files:
 	src/lib/lua/sqlite [netbsd-7]: sqlite.c

 Log Message:
 Pull up following revision(s) (requested by mbalmer in ticket #1416):
 	lib/lua/sqlite/sqlite.c: revision 1.9
 Guard against double freeing of objects (explicit by the Lua program,
 then later by the garbage collector).
 This fixes PR bin/52218.


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.7.2.1 src/lib/lua/sqlite/sqlite.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52218 CVS commit: [netbsd-6] src/lib/lua/sqlite
Date: Sun, 23 Jul 2017 14:19:28 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sun Jul 23 14:19:28 UTC 2017

 Modified Files:
 	src/lib/lua/sqlite [netbsd-6]: sqlite.c

 Log Message:
 Pull up following revision(s) (requested by mbalmer in ticket #1452):
 	lib/lua/sqlite/sqlite.c: revision 1.9
 Guard against double freeing of objects (explicit by the Lua program,
 then later by the garbage collector).
 This fixes PR bin/52218.


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.3.4.1 src/lib/lua/sqlite/sqlite.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.