Pull up following revision(s) (requested by mbalmer in ticket #1416): 	lib/lua/sqlite/sqlite.c: revision 1.9 Guard against double freeing of objects (explicit by the Lua program, then later by the garbage collector). This fixes PR bin/52218.