lib/lua/sqlite/sqlite.c
@@ -1,7 +1,7 @@
-/*	$NetBSD: sqlite.c,v 1.7 2014/07/19 18:38:34 lneto Exp $ */
+/*	$NetBSD: sqlite.c,v 1.7.2.1 2017/06/03 17:11:51 snj Exp $ */
 
 /*
- * Copyright (c) 2011, 2013 Marc Balmer <marc@msys.ch>
+ * Copyright (c) 2011, 2013, 2016, 2017 Marc Balmer <marc@msys.ch>
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -120,7 +120,11 @@ db_close(lua_State *L)
 	sqlite3 **db;
 
 	db = luaL_checkudata(L, 1, SQLITE_DB_METATABLE);
-	lua_pushinteger(L, sqlite3_close(*db));
+	if (*db) {
+		lua_pushinteger(L, sqlite3_close(*db));
+		*db = NULL;
+	} else
+		lua_pushnil(L);
 	return 1;
 
 }
@@ -342,7 +346,10 @@ stmt_finalize(lua_State *L)
 	sqlite3_stmt **stmt;
 
 	stmt = luaL_checkudata(L, 1, SQLITE_STMT_METATABLE);
-	sqlite3_finalize(*stmt);
+	if (*stmt) {
+		sqlite3_finalize(*stmt);
+		*stmt = NULL;
+	}
 	return 0;
 }
 
